Atualizado estrutura de import e export
